# control_motor_node

./: README.md
install/: local_setup.sh  setup.sh
install/motor_control/lib/motor_control/: motor_control_node
install/motor_control/share/motor_control/: package.sh  package.xml
install/motor_control_cpp/lib/motor_control_cpp/: motor_control_node
install/motor_control_cpp/share/motor_control_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_control_cpp/share/motor_control_cpp/cmake/: motor_control_cppConfig.cmake
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/install/my_camera/lib/my_camera/: ip_stream_node  usbcam_node  webcam_node
src/install/my_camera/share/my_camera/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
src/motor_control/: setup.py
src/motor_control/launch/: motor_control.launch.py
src/motor_control/motor_control/: motor_control_node.py
src/motor_control_cpp/: CMakeLists.txt
src/motor_control_cpp/include/motor_control_cpp/: motor_control_node.hpp
src/motor_control_cpp/launch/: motor_control.launch.py
src/motor_control_cpp/src/: motor_control_node.cpp
src/pi_usb_camera/: package.xml  setup.cfg  setup.py
src/pi_usb_camera/pi_usb_camera/: camera_node.py
