<?xml version="1.0"?>
   <package format="3">
       <name>motor_control</name>
       <version>0.0.1</version>
       <description>ROS 2 package for controlling stepper motors using RPi.GPIO.</description>
       <maintainer email="user@example.com">Your Name</maintainer>
       <license>Apache License 2.0</license>

       <buildtool_depend>ament_python</buildtool_depend>

       <depend>rclpy</depend>
       <depend>geometry_msgs</depend>
       <depend>std_msgs</depend>
       <depend>RPi.GPIO</depend>

       <test_depend>ament_lint_auto</test_depend>
       <test_depend>ament_lint_common</test_depend>

       <export>
           <build_type>ament_python</build_type>
       </export>
   </package>