<?xml version="1.0"?>
<package format="3">
    <name>motor_control_cpp</name>
    <version>0.0.1</version>
    <description>ROS 2 package for controlling stepper motors using pigpio in C++.</description>
    <maintainer email="user@example.com">Your Name</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>